[package]
name = "cosmic-protocols"
version = "0.1.0"
edition = "2021"
documentation = "https://pop-os.github.io/cosmic-protocols/"
repository = "https://github.com/pop-os/cosmic-protocols"
authors = ["Victoria Brekenfeld <github@drakulix.de>"]
license = "GPL-3.0"
keywords = ["wayland", "client", "server", "protocol", "extension"]
description = "Generated API for the COSMIC wayland protocol extensions"
categories = ["gui", "api-bindings"]
readme = "README.md"

[dependencies]
wayland-scanner = "0.30.0"
wayland-backend = "0.1.0"
wayland-protocols = "0.30.0"
wayland-client = { version = "0.30.1", optional = true }
wayland-server = { version = "0.30.0", optional = true }
bitflags = "1.0"

[dev-dependencies]
async-channel = "1.7.1"
cascade = "1"
env_logger = "0.9.1"
png = "0.17.5"
smithay = { git = "https://github.com/Smithay/smithay", rev = "c35bc3e", default-features = false, features = ["backend_egl", "renderer_gl", "renderer_multi"]}
wayland-backend = { version = "0.1.0", features = ["client_system"] }
memfd = "0.6.1"

[features]
default = ["client", "server"]
client = ["wayland-client", "wayland-protocols/client"]
server = ["wayland-server", "wayland-protocols/server"]

[workspace]
members = ["client-toolkit"]
