[package]
name = "cosmic-protocols"
version = "0.1.0"
edition = "2024"
documentation = "https://pop-os.github.io/cosmic-protocols/"
repository = "https://github.com/pop-os/cosmic-protocols"
authors = ["Victoria Brekenfeld <github@drakulix.de>"]
license = "GPL-3.0-only"
keywords = ["wayland", "client", "server", "protocol", "extension"]
description = "Generated API for the COSMIC wayland protocol extensions"
categories = ["gui", "api-bindings"]
readme = "README.md"

[dependencies]
wayland-scanner = "0.31.7"
wayland-backend = "0.3.11"
wayland-protocols = { version = "0.32.9", features = ["staging"] }
wayland-protocols-wlr = "0.3.9"
wayland-client = { version = "0.31.11", optional = true }
wayland-server = { version = "0.31.10", optional = true }
bitflags = "2.9"

[dev-dependencies]
wayland-backend = { version = "0.3.11", features = ["client_system"] }

[features]
default = ["client", "server"]
client = [
    "wayland-client",
    "wayland-protocols/client",
    "wayland-protocols-wlr/client",
]
server = [
    "wayland-server",
    "wayland-protocols/server",
    "wayland-protocols-wlr/server",
]

[workspace]
members = ["client-toolkit"]
