[package]
name = "cosmic-client-toolkit"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmic-protocols = { path = "../" }
sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit", rev = "2e9bf9f" }
wayland-client = { version = "0.31.1" }
smithay = { git = "https://github.com/Smithay/smithay", rev = "c35bc3e", default-features = false, features = ["backend_egl", "renderer_gl", "renderer_multi"], optional = true }
libc = "0.2.153"

[build-dependencies]
gl_generator = { version = "0.14.0", optional = true }

[dev-dependencies]
futures = "0.3.24"
cascade = "1"
env_logger = "0.10.0"
gdk-pixbuf = "0.18.0"
glow = "0.12.0"
iced = { version = "0.10.0", features = ["image"] }
nix = { version = "0.27.0", features = ["fs"] }
raw-window-handle = "0.5.0"
wayland-backend = { version = "0.3.2", features = ["client_system"] }
winit = "0.28.0"

[features]
default = []
gl = ["gl_generator"]
